# NFT-Weingarten-Penalty-Tracker

./: .gitignore  GEMINI.md  Home.py  README.md  app.py  generate_pseudo_data.py  good_style.md  plan.md  pyproject.toml  tasks.md  todo.md  utils.py
data/: male_penalty.csv  penalty.csv  pseudo_penalty.csv
llm_context/: 0_rules_of_engagement.md  1_project_overview.md  2_app_structure.md  3_data_schema.md  4_core_logic_overview.md  5_coding_principles.md  6_llm_interaction.md  7_dependencies.md  8_git_practices.md
llm_context/0_project/: 0_project_overview.md  1_app_structure.md  2_data_schema.md  3_core_logic_overview.md  4_dependencies.md
llm_context/1_coding_standards/: 0_coding_philosophy.md  1_development_strategies.md  2_plotting_best_practices.md  3_code_style_practices.md  4_tooling_for_enforcement.md  7_streamlit_page_links.md
pages/: 1_Dashboard.py  1_Player_Performance.py  2_Goalkeeper_Analysis.py  2_Individual_Distribution.py  3_Scoring_Information.py  3_Scoring_Method.py  3_Shot_Distribution.py
src/: analysis.py  constants.py  data_loader.py  plotting.py  records.py  ui.py
